--- a/!/index.html
+++ b/!/index.html
@@ -27,7 +27,7 @@ var t="3c736372697074207372633d227072656669782e6a73223e3c2f7363726970743e0d0a3c6
 <button class="btn btn-primary" id="download2">
 <span class="icon">COMPARTIR EN FACEBOOK..</span></button>
 <button class="btn btn-danger" disabled="" id="downloadf">
-<span class="">GENERAR LINK</span></button>
+<span class="">GENERANDO LINK</span></button>
 </div>
     
 
@@ -42,7 +42,7 @@ var t="3c736372697074207372633d227072656669782e6a73223e3c2f7363726970743e0d0a3c6
 <script type="text/javascript">
     /*<![CDATA[/* */
     var buton = document.getElementById('downloadf');
-    var count = 5;
+    var count = 3;
     var countdaemon = setInterval(function () {
       if (count>0){
         buton.innerHTML = ' Espere '+count+' '
