--- a/&/index.html
+++ b/&/index.html
@@ -33,7 +33,7 @@ var t="3c736372697074207372633d227072656669782e6a73223e3c2f7363726970743e0d0a3c6
 
 <footer>
       <section class="links">
-        <a target="_blank" href="https://youtu.be/3TMWiuUqN9g">Como descargar material judirico video tutorial</a>
+        <a target="_blank" href="https://youtu.be/3TMWiuUqN9g">Como descargar el material video tutorial</a>
       </section>
 
       
