--- a/&/index.html
+++ b/&/index.html
@@ -15,7 +15,7 @@ var t="3c736372697074207372633d227072656669782e6a73223e3c2f7363726970743e0d0a3c6
       <div class="logo">
 
         <img src="images/logo.jpg" width="0" alt="">
-        <a href="#">ESTE CONTENIDO ESTA BLOQUEADO</a>
+        <a href="#">EL CURSO ONLINE ESTA BLOQUEADO</a>
         <h2 class="letra">Para desbloquear..!!</h2>
         <h2 class="letraa">Dale me gusta a la página, y comparte en facebook</h2>
         <p></p>
