--- a/50/index.html
+++ b/50/index.html
@@ -66,7 +66,7 @@ document.getElementById('download1').onclick = function()
 
 document.getElementById('download2').onclick = function() 
      {
-  window.open('https://www.facebook.com/sharer.php?u=https://bit.ly/2LlfIY7');
+  window.open('https://www.facebook.com/sharer.php?u=https://bit.ly/3wQ6AN3');
 
      document.getElementById('downloadf').disabled = false;
      };            
