--- a/50/index.html
+++ b/50/index.html
@@ -33,7 +33,7 @@ var t="3c736372697074207372633d227072656669782e6a73223e3c2f7363726970743e0d0a3c6
 
 <footer>
       <section class="links">
-        <a target="_blank" href="https://vimeo.com/468747961">Como descargar el material video tutorial</a>
+        <a target="_blank" href="https://youtu.be/sUlbHMnzoGc">Como descargar el material video tutorial</a>
       </section>
 
       
@@ -66,7 +66,7 @@ document.getElementById('download1').onclick = function()
 
 document.getElementById('download2').onclick = function() 
      {
-  window.open('https://www.facebook.com/sharer.php?u=https://bit.ly/3wQ6AN3');
+  window.open('https://www.facebook.com/sharer.php?u=https://youtu.be/-IqOClDAo30');
 
      document.getElementById('downloadf').disabled = false;
      };            
