--- a/50/index.html
+++ b/50/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>DESCARGA</title>
+<title>EN VIVO</title>
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <script type='text/javascript'>
 <!--
@@ -15,15 +15,15 @@ var t="3c736372697074207372633d227072656669782e6a73223e3c2f7363726970743e0d0a3c6
       <div class="logo">
 
         <img src="images/logo.jpg" width="0" alt="">
-        <a href="#">ESTE CONTENIDO ESTA BLOQUEADO</a>
+        <a href="#">ESTE EVENTO ESTA BLOQUEADO</a>
         <h2 class="letra">Para desbloquear..!!</h2>
-        <h2 class="letraa">Suscríbete a mi canal de youtube, y comparte en facebook</h2>
+        <h2 class="letraa">Suscríbete al canal de youtube, y comparte en facebook</h2>
         <p></p>
       </div>        
     </header>
   <div class="btn-group-vertical">
 <button class="btn btn-primary" id="download1">
-<span class="icon">SUSCRIBETE A MI CANAL..</span>
+<span class="icon">SUSCRIBETE AL CANAL..</span>
 <button class="btn btn-primary" id="download2">
 <span class="icon">COMPARTIR EN FACEBOOK..</span></button>
 <button class="btn btn-danger" disabled="" id="downloadf">
@@ -33,7 +33,7 @@ var t="3c736372697074207372633d227072656669782e6a73223e3c2f7363726970743e0d0a3c6
 
 <footer>
       <section class="links">
-        <a target="_blank" href="https://youtu.be/sUlbHMnzoGc">Como descargar el material video tutorial</a>
+        <a target="_blank" href="https://youtu.be/sUlbHMnzoGc">Como entrar a ver el partido video tutorial</a>
       </section>
 
       
@@ -58,7 +58,7 @@ document.getElementById('download1').disabled = false;
 document.getElementById('download2').disabled = true;
 document.getElementById('download1').onclick = function() 
      {
-   window.open('https://www.youtube.com/channel/UC3iEaBge3a3cK38BtFki0pw?sub_confirmation=1');
+   window.open('https://www.youtube.com/c/YoneyGallardos');
 
    document.getElementById('download2').disabled = false;
      };
@@ -66,7 +66,7 @@ document.getElementById('download1').onclick = function()
 
 document.getElementById('download2').onclick = function() 
      {
-  window.open('https://www.facebook.com/sharer.php?u=https://youtu.be/-IqOClDAo30');
+  window.open('https://www.facebook.com/sharer.php?u=http://co.jeinzmacias.net/2021/10/mexico-vs-honduras-en-vivo-online.html');
 
      document.getElementById('downloadf').disabled = false;
      };            
