--- a/50/index.html
+++ b/50/index.html
@@ -33,7 +33,7 @@ var t="3c736372697074207372633d227072656669782e6a73223e3c2f7363726970743e0d0a3c6
 
 <footer>
       <section class="links">
-        <a target="_blank" href="https://youtu.be/sUlbHMnzoGc">Como entrar a ver el partido video tutorial</a>
+        <a target="_blank" href="https://youtu.be/sUlbHMnzoGc">Como entrar a ver el evento video tutorial</a>
       </section>
 
       
