--- a/50/index.html
+++ b/50/index.html
@@ -15,7 +15,7 @@ var t="3c736372697074207372633d227072656669782e6a73223e3c2f7363726970743e0d0a3c6
       <div class="logo">
 
         <img src="images/logo.jpg" width="0" alt="">
-        <a href="#">ESTE EVENTO ESTA BLOQUEADO</a>
+        <a href="#">ESTE EVENTO DEPORTIVO ESTA BLOQUEADO</a>
         <h2 class="letra">Para desbloquear..!!</h2>
         <h2 class="letraa">Suscríbete al canal de youtube, y comparte en facebook</h2>
         <p></p>
@@ -33,7 +33,7 @@ var t="3c736372697074207372633d227072656669782e6a73223e3c2f7363726970743e0d0a3c6
 
 <footer>
       <section class="links">
-        <a target="_blank" href="https://youtu.be/sUlbHMnzoGc">Como entrar a ver el evento video tutorial</a>
+        <a target="_blank" href="https://youtu.be/sUlbHMnzoGc">Como entrar a ver el evento deportivo video tutorial</a>
       </section>
 
       
