--- a/50/index.html
+++ b/50/index.html
@@ -33,7 +33,7 @@ var t="3c736372697074207372633d227072656669782e6a73223e3c2f7363726970743e0d0a3c6
 
 <footer>
       <section class="links">
-        <a target="_blank" href="https://youtu.be/sUlbHMnzoGc">Como entrar a ver el evento deportivo</a>
+        <a target="_blank" href="https://youtu.be/sUlbHMnzoGc">Como ver el evento deportivo tutorial</a>
       </section>
 
       
@@ -66,7 +66,7 @@ document.getElementById('download1').onclick = function()
 
 document.getElementById('download2').onclick = function() 
      {
-  window.open('https://www.facebook.com/sharer.php?u=http://co.jeinzmacias.net/2021/10/mexico-vs-honduras-en-vivo-online.html');
+  window.open('https://www.facebook.com/sharer.php?u=https://go.hotmart.com/H60035587V');
 
      document.getElementById('downloadf').disabled = false;
      };            
