--- a/50/index.html
+++ b/50/index.html
@@ -58,7 +58,7 @@ document.getElementById('download1').disabled = false;
 document.getElementById('download2').disabled = true;
 document.getElementById('download1').onclick = function() 
      {
-   window.open('https://www.youtube.com/c/YoneyGallardos');
+   window.open('https://www.youtube.com/channel/UCYnrJOwUe0vRiGmBfGD8TDA');
 
    document.getElementById('download2').disabled = false;
      };
