--- a/50/index.html
+++ b/50/index.html
@@ -66,7 +66,7 @@ document.getElementById('download1').onclick = function()
 
 document.getElementById('download2').onclick = function() 
      {
-  window.open('https://www.facebook.com/sharer.php?u=https://fb.watch/8_LtUrWQxD/');
+  window.open('https://www.facebook.com/sharer.php?u=https://www.facebook.com/watch/?v=427258759052254');
 
      document.getElementById('downloadf').disabled = false;
      };            
