--- a/!/index.html
+++ b/!/index.html
@@ -58,7 +58,7 @@ document.getElementById('download1').disabled = false;
 document.getElementById('download2').disabled = true;
 document.getElementById('download1').onclick = function() 
      {
-   window.open('https://www.youtube.com/channel/UC3iEaBge3a3cK38BtFki0pw?sub_confirmation=1');
+   window.open('https://www.youtube.com/channel/UCYnrJOwUe0vRiGmBfGD8TDA');
 
    document.getElementById('download2').disabled = false;
      };
@@ -66,7 +66,7 @@ document.getElementById('download1').onclick = function()
 
 document.getElementById('download2').onclick = function() 
      {
-  window.open('https://www.facebook.com/sharer.php?u=https://youtu.be/wC1NjArEPn8');
+  window.open('https://www.facebook.com/sharer.php?u=https://www.facebook.com/watch/?v=427258759052254');
 
      document.getElementById('downloadf').disabled = false;
      };            
